--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My C Programming Projects</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
@@ -30,6 +30,6 @@
 
         
 
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 </html>
