--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul id="project-list">
                 <li>
                     <h3>Project </h3>
-                    <p>Project  goes here. <a href="https://example.com/project1" target="_blank">View Project</a></p>
+                    <p>Project  goes here. <a href="https://royal-fork.github.io/practicalc-1/" target="_blank">View Project</a></p>
                 </li>
                 
             </ul>
