--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Projects</h2>
             <ul id="project-list">
                 <li>
-                    <h3>Project </h3>
+                    <h3>Project 1 </h3>
                     <p>Project  goes here. <a href="https://royal-fork.github.io/practicalc-1/" target="_blank">View Project</a></p>
                 </li>
                 
