--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
             <ul id="project-list">
                 <li>
                     <h3>Project 1 </h3>
-                    <p>Project  goes here. <a href="https://royal-fork.github.io/practicalc-1/" target="_blank">View Project</a></p>
-<h3>Project 2 </h3>
+                    <p>Project  goes here. <a href="https://royal-fork.github.io/practicalc-1/" target="_blank">View Project</a></p> </li>
+                    <h3>Project 2 </h3>
                     <p>Project  goes here. <a href="https://royal-fork.github.io/practicalc-2/" target="_blank">View Project</a></p>
-<h3>Project 3 </h3>
+                    <h3>Project 3 </h3>
                     <p>Project  goes here. <a href="https://royal-fork.github.io/practicalc-3/" target="_blank">View Project</a></p>
-<h3>Project 4 </h3>
+                  <li>   <h3>Project 4 </h3>
                     <p>Project  goes here. <a href="https://royal-fork.github.io/practicalc-4/" target="_blank">View Project</a></p>
+                  </li>
                 </li>
                 
             </ul>
